--- a/setfilhome/assets/less/main.less
+++ b/setfilhome/assets/less/main.less
@@ -23,16 +23,32 @@
 /* ---------------------------------------
     BODY
 ----------------------------------------- */
+
+html {
+    height: 100%;
+    box-sizing: border-box;
+}
+
 body {
     font-family: "NotoSans", sans-serif;
-    //font-size: 12px;
-    line-height: 1.5em;
-    color: #333;
+    height: 100%;
     text-align: center;
-    height: auto;
     transition: background-color .5s;
     
     background-color: #f2f2f2;
+
+    .footer {
+        width: 100%;
+        height: 60px;
+        text-align: center;
+        padding: 10px;
+        .copyright {
+            color:  #000000;
+            font-size: 15px;
+            font-weight: 300;
+            line-height: 20px;
+        }
+    }
 }
 
 .top-nav {
@@ -98,7 +114,7 @@ body {
 
 .main-content {
     //transition: margin-left .2s;
-    margin-top: 64px;
+    padding-top: 64px;
     height: 100%;
 
     @color_1: #000000;
@@ -212,6 +228,13 @@ body {
 }
 
 #projectsPage {
+    min-height: 100%;
+    margin-bottom: -60px;
+    &:after {
+        content: "";
+        display: block;
+        height: 60px;
+    }
     #gallery {
         .underline-left {
             color:  #ffffff;
@@ -294,8 +317,13 @@ body {
 }
 
 #projectDetailPage {
-    // background-color: #f2f2f2;
-    //height: 100%;
+    min-height: 100%;
+    margin-bottom: -60px;
+    &:after {
+        content: "";
+        display: block;
+        height: 60px;
+    }
     .row {
         margin: 0;
         
@@ -374,7 +402,13 @@ body {
 }
 
 #productsPage {
-    // background-color: #f2f2f2;
+    min-height: 100%;
+    margin-bottom: -60px;
+    &:after {
+        content: "";
+        display: block;
+        height: 60px;
+    }
     .row {
         margin: 0;
     }
@@ -447,7 +481,13 @@ body {
 }
 
 #aboutusPage {
-    // background-color: #f2f2f2;
+    min-height: 100%;
+    margin-bottom: -60px;
+    &:after {
+        content: "";
+        display: block;
+        height: 60px;
+    }
     .main-content {
         .right-content {
             @media (max-width: 860px) {
@@ -514,7 +554,13 @@ body {
 }
 
 #contactPage {
-    // background-color: #f2f2f2;
+    min-height: 100%;
+    margin-bottom: -60px;
+    &:after {
+        content: "";
+        display: block;
+        height: 60px;
+    }
     .main-content {
         .right-content {
             @media (max-width: 860px) {
