--- a/setfilhome/assets/styles/styles.css
+++ b/setfilhome/assets/styles/styles.css
@@ -7078,21 +7078,34 @@ body .footer .copyright {
   padding-right: 30px;
   position: relative;
 }
-#productsPage .products-img .img-wrapper {
+@media (max-width: 1000px) {
+  #productsPage .products-img {
+    padding-top: 20px;
+    padding-left: 30px;
+  }
+}
+#productsPage .products-img .products-img-wrapper {
+  position: relative;
+}
+#productsPage .products-img .products-img-wrapper .img-wrapper {
+  height: 100%;
   cursor: pointer;
   padding: 1px;
   transition: all 0.3s ease;
+  z-index: 200;
 }
-#productsPage .products-img .img-wrapper:hover {
+#productsPage .products-img .products-img-wrapper .img-wrapper:hover {
   opacity: 0.8;
 }
-#productsPage .products-img .img-wrapper:hover .title {
+#productsPage .products-img .products-img-wrapper .img-wrapper:hover .title {
   opacity: 1;
 }
-#productsPage .products-img .img-wrapper img {
+#productsPage .products-img .products-img-wrapper .img-wrapper img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-#productsPage .products-img .img-wrapper .title {
+#productsPage .products-img .products-img-wrapper .img-wrapper .title {
   position: absolute;
   bottom: 30px;
   width: 100%;
@@ -7100,11 +7113,19 @@ body .footer .copyright {
   color: #ffffff;
   opacity: 0;
 }
-#productsPage .products-img .preview {
+#productsPage .products-img .products-img-wrapper .preview {
+  height: 100%;
   position: absolute;
+  bottom: 0;
+  padding: 1px;
+  z-index: 100;
+  transition: all 0.3s ease;
+  opacity: 0;
 }
-#productsPage .products-img .preview img {
+#productsPage .products-img .products-img-wrapper .preview img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 #aboutusPage {
   min-height: 100%;
