--- a/setfilhome/assets/less/main.less
+++ b/setfilhome/assets/less/main.less
@@ -67,8 +67,10 @@ body {
         .left-content {
             position: absolute;
             left: 30px;
+            width: 200px;
             .menu-icon {
                 color: black;
+                float: left;
                 i {
                     font-size: 29px;
                 }
@@ -125,7 +127,7 @@ body {
         height: 100%;
         width: 0;
         position: fixed;
-        z-index: 100;
+        z-index: 500;
         left: 0;
         background-color: @background_color_1;
         overflow-x: hidden;
