--- a/setfilhome/assets/less/main.less
+++ b/setfilhome/assets/less/main.less
@@ -512,6 +512,9 @@ body {
                     text-align: center;
                     color: #ffffff;
                     opacity: 0;
+                    @media (max-width: 857px) {
+                        opacity: 1!important;
+                    }
                 }
             }
             .preview {
@@ -628,6 +631,10 @@ body {
                 @media (max-width: 860px) {
                     padding: 10px;
                 }
+                #map {
+                    // width: 400px;
+                    height: 250px;
+                }
                 .left {
                     text-align: right;
                     padding-top: 25px;
@@ -658,6 +665,7 @@ body {
                     .btn-send {
                         background-color: #000;
                         border-radius: 0;
+                        margin-left: 7px;
                         &:hover {
                             color: #fff
                         }
