--- a/setfilhome/assets/styles/styles.css
+++ b/setfilhome/assets/styles/styles.css
@@ -7115,6 +7115,11 @@ body .footer .copyright {
   color: #ffffff;
   opacity: 0;
 }
+@media (max-width: 857px) {
+  #productsPage .products-img .products-img-wrapper .img-wrapper .title {
+    opacity: 1!important;
+  }
+}
 #productsPage .products-img .products-img-wrapper .preview {
   height: 100%;
   position: absolute;
@@ -7229,6 +7234,9 @@ body .footer .copyright {
     padding: 10px;
   }
 }
+#contactPage .main-content .right-content .wrapper #map {
+  height: 250px;
+}
 #contactPage .main-content .right-content .wrapper .left {
   text-align: right;
   padding-top: 25px;
@@ -7264,6 +7272,7 @@ body .footer .copyright {
 #contactPage .main-content .right-content .wrapper .right .btn-send {
   background-color: #000;
   border-radius: 0;
+  margin-left: 7px;
 }
 #contactPage .main-content .right-content .wrapper .right .btn-send:hover {
   color: #fff;
