--- a/setfilhome/assets/styles/styles.css
+++ b/setfilhome/assets/styles/styles.css
@@ -7117,7 +7117,7 @@ body .footer .copyright {
 }
 @media (max-width: 857px) {
   #productsPage .products-img .products-img-wrapper .img-wrapper .title {
-    opacity: 1!important;
+    opacity: 0!important;
   }
 }
 #productsPage .products-img .products-img-wrapper .preview {
@@ -7205,7 +7205,37 @@ body .footer .copyright {
   text-align: left;
 }
 #aboutusPage .main-content .right-content .wrapper .social-network .follow-us {
+  padding: 10px;
   text-transform: uppercase;
+  cursor: pointer;
+  height: 45px;
+}
+#aboutusPage .main-content .right-content .wrapper .social-network .network {
+  padding: 10px;
+  height: 45px;
+}
+#aboutusPage .main-content .right-content .wrapper .social-network .network .fb {
+  background: url('../images/facebook.png') no-repeat;
+  display: inline-block;
+  height: 21px;
+  width: 11px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+#aboutusPage .main-content .right-content .wrapper .social-network .network .in {
+  background: url('../images/instagram.png') no-repeat;
+  display: inline-block;
+  height: 21px;
+  width: 21px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+#aboutusPage .main-content .right-content .wrapper .social-network .network .tw {
+  background: url('../images/twitter.png') no-repeat;
+  display: inline-block;
+  height: 18px;
+  width: 22px;
+  padding-left: 25px;
   cursor: pointer;
 }
 #contactPage {
