--- a/setfilhome/assets/less/main.less
+++ b/setfilhome/assets/less/main.less
@@ -530,6 +530,13 @@ body {
                     height: 100%;
                     object-fit: cover;
                 }
+                .btn-close {
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    cursor: pointer;
+                    z-index: 600;
+                }
             }
         }
     }
@@ -691,7 +698,9 @@ body {
                             color: #000;
                         }
                     }
-                    
+                    .input-field {
+                        padding-bottom: 11px;
+                    }
                     .btn-send {
                         background-color: #000;
                         border-radius: 0;
