--- a/setfilhome/assets/less/main.less
+++ b/setfilhome/assets/less/main.less
@@ -522,7 +522,7 @@ body {
                 position: absolute;
                 bottom: 0;
                 padding: 1px;
-                z-index: 100;
+                z-index: 0;
                 transition:all 0.3s ease;
                 opacity: 0;
                 img {
@@ -699,7 +699,12 @@ body {
                         }
                     }
                     .input-field {
-                        padding-bottom: 11px;
+                        padding-bottom: 5px;
+                    }
+                    .mgs {
+                        textarea {
+                            min-height: 60px !important;
+                        }
                     }
                     .btn-send {
                         background-color: #000;
