--- a/setfilhome/assets/styles/styles.css
+++ b/setfilhome/assets/styles/styles.css
@@ -7125,7 +7125,7 @@ body .footer .copyright {
   position: absolute;
   bottom: 0;
   padding: 1px;
-  z-index: 100;
+  z-index: 0;
   transition: all 0.3s ease;
   opacity: 0;
 }
@@ -7307,7 +7307,10 @@ body .footer .copyright {
   color: #000;
 }
 #contactPage .main-content .right-content .wrapper .right .input-field {
-  padding-bottom: 11px;
+  padding-bottom: 5px;
+}
+#contactPage .main-content .right-content .wrapper .right .mgs textarea {
+  min-height: 60px !important;
 }
 #contactPage .main-content .right-content .wrapper .right .btn-send {
   background-color: #000;
