--- a/setfilhome/assets/less/main.less
+++ b/setfilhome/assets/less/main.less
@@ -525,6 +525,7 @@ body {
                 z-index: 0;
                 transition:all 0.3s ease;
                 opacity: 0;
+                transform: scale(0.5);
                 img {
                     width: 100%;
                     height: 100%;
