--- a/setfilhome/assets/styles/styles.css
+++ b/setfilhome/assets/styles/styles.css
@@ -7128,6 +7128,7 @@ body .footer .copyright {
   z-index: 0;
   transition: all 0.3s ease;
   opacity: 0;
+  transform: scale(0.5);
 }
 #productsPage .products-img .products-img-wrapper .preview img {
   width: 100%;
