--- a/setfilhome/assets/less/main.less
+++ b/setfilhome/assets/less/main.less
@@ -488,6 +488,7 @@ body {
 
         .products-img-wrapper {
             position: relative;
+            min-height: 400px;
             .img-wrapper {
                 height: 100%;
                 cursor: pointer;
@@ -504,6 +505,7 @@ body {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
+                    min-height: 200px;
                 }
                 .title {
                     position: absolute;
