--- a/setfilhome/assets/less/main.less
+++ b/setfilhome/assets/less/main.less
@@ -492,7 +492,7 @@ body {
             position: relative;
             min-height: 400px;
             .img-wrapper {
-                height: 100%;
+                height: 200px;
                 cursor: pointer;
                 padding: 1px;
                 transition:all 0.3s ease;
@@ -507,7 +507,7 @@ body {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
-                    min-height: 200px;
+                    // min-height: 200px;
                 }
                 .title {
                     position: absolute;
@@ -573,15 +573,25 @@ body {
                     margin: 0;
                     .left {
                         padding: 0;
+                        padding-right: 1px;
                         img {
                             padding-top: 0;
                             padding-left: 0;
                         }
+                        .img1 {
+                            height: 481px;
+                        }
                     }
                     .right {
                         padding: 0;
-                        .img1 {
-                            padding-top: 0;
+                        .img-wrapper3 {
+                            padding-top: 1px;
+                        }
+                        .img2 {
+                            height: 240px;
+                        }
+                        .img3 {
+                            height: 240px;
                         }
                         img {
                             padding-right: 0;
@@ -589,7 +599,7 @@ body {
                     }
                     img {
                         width: 100%;
-                        padding: 1px;
+                        // padding: 1px;
                         @media (max-width: 860px) {
                             padding: 0;
                             padding-bottom: 1px;
