--- a/setfilhome/assets/less/main.less
+++ b/setfilhome/assets/less/main.less
@@ -188,20 +188,51 @@ body {
         }
         .scroll-icon {
             position: absolute;
-            bottom: 0;
+            bottom: 45px;
             width: 100%;
             margin: 0 auto;
             z-index: 999;
-            span {
+
+            .btn-scroll7 a span {
+            	position: absolute;
+            	top: 0;
+            	left: 50%;
+            	width: 18px;
+            	height: 18px;
+            	margin-left: -12px;
+            	border-left: 1px solid #fff;
+            	border-bottom: 1px solid #fff;
+            	-webkit-transform: rotate(-45deg);
+            	transform: rotate(-45deg);
+            	-webkit-animation: sdb07 2s infinite;
+            	animation: sdb07 2s infinite;
+            	opacity: 0;
+            	box-sizing: border-box;
+            }
+            .btn-scroll7 a span:nth-of-type(1) {
+            	-webkit-animation-delay: 0s;
+            	animation-delay: 0s;
+            }
+            .btn-scroll7 a span:nth-of-type(2) {
+            	top: 16px;
+            	-webkit-animation-delay: .15s;
+            	animation-delay: .15s;
+            }
+            .btn-scroll7 a span:nth-of-type(3) {
+            	top: 32px;
+            	-webkit-animation-delay: .3s;
+            	animation-delay: .3s;
+            }
+
+            .btn-scroll {
+                position: relative;
+            }
+            a {
                 font-weight: 700;
                 display: block;
                 font-size: 16px;
                 color: rgba(0, 0, 0, 0.75);
                 cursor: pointer;
-                i {
-                    font-size: 36px;
-                    line-height: 15px;
-                }
             }
         }
     }
