--- a/setfilhome/assets/less/main.less
+++ b/setfilhome/assets/less/main.less
@@ -37,6 +37,8 @@ body {
 
     background-color: #f2f2f2;
 
+    opacity: 0;
+
     .footer {
         width: 100%;
         height: 60px;
@@ -54,7 +56,7 @@ body {
 .top-nav {
     position: fixed;
     top: 0;
-    z-index: 999;
+    z-index: 900;
     height: 64px;
     background-color: #fff;
     .nav-wrapper {
@@ -231,7 +233,7 @@ body {
                 font-weight: 700;
                 display: block;
                 font-size: 16px;
-                color: rgba(0, 0, 0, 0.75);
+                color: #ffffff;
                 cursor: pointer;
             }
         }
@@ -773,7 +775,7 @@ body {
                     }
                     .mgs {
                         textarea {
-                            min-height: 60px !important;
+                            min-height: 58px !important;
                         }
                     }
                     .btn-send {
