--- a/setfilhome/assets/styles/styles.css
+++ b/setfilhome/assets/styles/styles.css
@@ -7400,3 +7400,35 @@ body .footer .copyright {
 #contactPage .main-content .right-content .wrapper .right .btn-send:hover {
   color: #fff;
 }
+.vegas-transition-kha {
+  opacity: 0;
+  transition: opacity 0.1s ease-in-out;
+  transform: scale(1.2);
+}
+.vegas-transition-kha-in {
+  opacity: 1;
+  transition: opacity 0.1s ease-in-out;
+  transform: scale(1);
+}
+.vegas-transition-kha-out {
+  opacity: 0;
+  transition: opacity 0.1s ease-in-out;
+  transform: scale(1);
+}
+@keyframes fadein {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+  }
+  66% {
+    opacity: 0;
+    visibility: hidden;
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+.vegas-animation-kha_ami {
+  transition: visibility 0s 2s, opacity 2s linear;
+}
